# CDEF

./: .gitignore  Au-dodecahedra.ipynb  Au-dodecahedra_v2.ipynb  CDEF_demo.ipynb  DE.ipynb  MCMC_decahedra.ipynb  README.md  pentagonal_bipyramids.ipynb  pyproject.toml  setup.py  win.diff
.github/workflows/: buildwheels_and_distribute.yaml
DE/: DE_bipy.py  DE_result_2025-10-10_17-52.pkl
benchmark/: autosaxs_fitresults.txt  autosaxs_fitresults_analytical.txt  benchmark.ipynb  benchmark.ods  ~$benchmark.ods
notebooks/: Au-decahedra.ipynb
src/CDEF/: CDEF_main.py  __init__.py  bipyramids.py  cloud.py
src/CDEF.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/debyer/: README  atomtables.c  debyer.c  debyer.h  debyer_wrap.c  polyhedrongeom.c  polyhedrongeom.h  testdebyer.py
stl_files_examples/: bipyramide.stl  cube.stl  cube_cut_edges.stl  cube_round_edges.stl  cylinder.stl  stretched_bipyramide.stl
