[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "numpy<2"
]
build-backend = "setuptools.build_meta"

[project]
name = "CDEF"
version = "1.1"
description = "Your package description"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy<2",
    "scipy",
    "matplotlib",
    "pandas",
    "lmfit",
    "numba",
    "trimesh",
]